--- a/DNDSpellbook/Base.lproj/Main.storyboard
+++ b/DNDSpellbook/Base.lproj/Main.storyboard
@@ -67,7 +67,7 @@
                                 </subviews>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="Jqn-lc-iGq">
-                                <rect key="frame" x="71.666666666666686" y="435.66666666666669" width="249.66666666666663" height="34.333333333333314"/>
+                                <rect key="frame" x="71.666666666666671" y="435.66666666666669" width="249.66666666666663" height="34.333333333333314"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Don't have an account?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4nB-BE-7pL">
                                         <rect key="frame" x="0.0" y="8.3333333333333144" width="161" height="18"/>
@@ -321,6 +321,7 @@
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="spellLabel" destination="83b-RR-TEJ" id="eVs-Nf-Kuu"/>
+                                            <segue destination="1Bd-Bc-hJA" kind="show" id="CmE-0w-M3L"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -343,6 +344,22 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SFq-Ox-1Ky" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2507.6335877862593" y="666.90140845070425"/>
+        </scene>
+        <!--Spell Detail View Controller-->
+        <scene sceneID="i0I-1B-aEs">
+            <objects>
+                <viewController id="1Bd-Bc-hJA" customClass="SpellDetailViewController" customModule="DNDSpellbook" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="DAc-OQ-ASG">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="Ef9-Sq-vMI"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="9Kb-fi-uY3"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="C9C-cF-SCg" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3719" y="1052"/>
         </scene>
         <!--Spells-->
         <scene sceneID="aNX-tR-guy">
